--- a/ExpyExamplesNotebook.ipynb
+++ b/ExpyExamplesNotebook.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Importing the class for designining, analysing and simulating A/B tests\n",
     "\n",
-    "from mylib import expy"
+    "import expy"
    ]
   },
   {
